--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		</style>
 
-		<script src="node_modules/framerjs-prebuilt/framer.js"></script>
+		<script src="framer.js"></script>
 		<script src="app.js"></script>
 
 	</head>
